objects/Parent_Object_Aug__c.object
<CustomObject>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Private Sector</fullName>
                </value>
                <value>
                    <fullName>Entrepreneur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sal__c</fullName>
        <label>Sal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_Object_Aug_8__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Object Aug 8</label>
        <referenceTo>Test_Object_Aug_8__c</referenceTo>
        <relationshipLabel>prsaug</relationshipLabel>
        <relationshipName>prsaug</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parent Object Aug</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent Object Aug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>prsaug</pluralLabel>
    <recordTypes>
        <fullName>RT_Tst_Aug</fullName>
        <active>true</active>
        <label>RT Tst Aug</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckFl</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Name = &quot;Admin&quot;</errorConditionFormula>
        <errorMessage>Error Msg</errorMessage>
    </validationRules>
</CustomObject>